<resources>
    <string name="app_name">MultiImageUpload</string>
    <string name="upload_house_images">Upload House Images</string>
    <string name="select_files_to_upload">Select Files to Upload</string>
    <string name="remove_selection">Remove Selection</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="desc">Description…</string>
    <string name="post_house">Post House</string>
    <string name="error_saving">Unable to save imageUrls</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
</resources>
