<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHouseActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_house_images"
                android:padding="16dp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <Button
                    android:id="@+id/btnChooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:background="@drawable/button_background_light"
                    android:text="@string/select_files_to_upload"
                    android:textColor="@android:color/white" />
                <Button
                    android:id="@+id/btnClearImages"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/remove_selection"
                    android:visibility="gone"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"/>
            </RelativeLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imagesViewPager"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@drawable/ic_gallery"
                android:layout_margin="16dp"/>

            <ProgressBar
                android:id="@+id/uploadProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:visibility="gone"
                android:layout_margin="8dp"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                android:elevation="2dp"
                app:tabIndicatorHeight="0dp"
                app:tabMaxWidth="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/saveProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/houseCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:background="@drawable/edit_text_background"/>
                <EditText
                    android:id="@+id/houseLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_below="@id/houseCategory"
                    android:background="@drawable/edit_text_background"/>
                <EditText
                    android:id="@+id/houseDesc"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:gravity="top"
                    android:padding="8dp"
                    android:layout_below="@id/houseLocation"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/desc"/>
                <Button
                    android:id="@+id/btnAddHouse"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/post_house"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:layout_below="@id/houseDesc"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background_light"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>